# raser

./: .gitignore  AGENTS.md  Makefile  README.md  TASK_MODULE_SPLIT.md  __main__.py  pyproject.toml
asic/: regincr.py  regincr2stage.py
bootstrap/: README.md
bootstrap/el9/: raser-el9-sif.def  setup_sif.sh
bootstrap/linux/: raser-linux-reference.def  readme-raser-linux.md
bootstrap/linux_arm64/: raser-linux-arm64-reference.def
bootstrap/linux_x86/: raser-linux-reference-py39-pybind.def  raser-linux-reference.def  readme-raser-linux-py39.md  readme-raser-linux.md  requirements-linux-py39-lock.txt
bootstrap/ubuntu/: raser-ubuntu-sif.def  setup_sif.sh
cfg/: setup.sh  setup_lxlogin.sh
control/: keithley2470ccontrol_hyj.py  keye4980acontrol.py  scan_amp.py  scan_cv_2470.py  scan_iv.py  scan_strip_iv.py  scaniv.py
current/: __init__.py  cal_current.py  model.py
docs/design/: concept-model.md
draw/: __init__.py  compare_cv.py  compare_iv.py  cv.py  draw_iv_cv_paper4.py  field_comparison.py  iv.py
elec/: __init__.py  cce_alpha.py  draw_t1.py  drs4_get_fig.py  ele_readout.py  ngspice.py  ngspice_get_fig.py  ngspice_set_input.py  noise_histogram.py  t1_create.py
env/: conda-linux-x86.yml  conda-macos-arm64.yml  conda.yml  install-ngspice-macos-arm64.sh  setup.sh  setup_cvmfs.sh  uv-linux-x86.txt  uv.txt
env/ponytail/: sitecustomize.py
field/: __init__.py  build_device.py  devsim_draw.py  devsim_field.py  devsim_solve.py  gen_devsim_db.py  initial.py  model_create.py  physics_avalanche.py  physics_drift_diffusion.py  physics_irradiation.py  test4hsic.py
fpga/: regincr.py  regincr_sim.py  regincr_test.py
gen_signal/: __init__.py  draw_save.py
misc/geant4-install/: geant4_build_1.sh  geant4_build_2.sh  geant4_build_3.sh  geant4_install_boost_change.py  install.sh
motor/: stage.py  tct_control.py  test_combine.py  thread.py
particle/: __init__.py  cal_niel.py  cal_temp.py  cflm.py  g4si_itk.py  g4simulation.py
root/: __init__.py
setting/daq/: MIM-Diamond.json
setting/detector/: DJLGAD_Ayyoub_1D.json  MIM-Diamond.json  MIM-Diamond_copy.json  general_pixel.json
setting/electronics/: ABCStar_fe.noise.json  ABCStar_fe_onoise_spectrum.raw  Broad_Band_Diamond.json  Broad_Band_UCSC.cir  Broad_Band_UCSC.json  Broad_Band_UCSC.noise.json  Broad_Band_UCSC_onoise_spectrum.raw  Charge_Sensitive_UCSC.json
setting/g4experiment/: charge_collection_diamond.json  charge_collection_diamond_copy.json  pcb_readout_gdml.json  time_resolution_diamond.json
setting/g4macro/: vis.mac
spaceres/: __init__.py  telescope.py  telescope_jiaqi.py  telescope_simulation.py
src/raser/: __main__.py
src/raser/afe/: __init__.py  ngspice.py  noise.py  noise_estimation.py  noise_validation.py  readout.py  recreate_batch_signals.py
src/raser/apps/: __init__.py
src/raser/bmos/: bmos.py
src/raser/cli/: project.py  raser.py
src/raser/current/: cal_current.py  cal_current_diffuse.py  carrier.py  model.py  optimized.current.py
src/raser/device/: build_device.py
src/raser/field/: create_mesh.py  create_parameter.py  devsim_draw.py  devsim_field.py  initial.py  physics_drift_diffusion.py
src/raser/interaction/: __init__.py  action_initialization.py  carrier_list.py  detector_construction.py  event_action.py  g4_beam_monitor.py  g4_diamond_energy_deposition.py  g4_gdml_import.py  g4_sic_energy_deposition.py  (+6 more)
tct/: __init__.py  extract_waveform.py  save_TTree.py  source.py  tct_analysis.py  tct_signal.py  tct_t1.py
tests/: conftest.py
tests/smoke/: test_external_environment.py
tests/unit/: test_current_material.py  test_ngspice_pwl.py  test_output_paths.py
timeres/: __init__.py  add_noise.py  time_scan.py
util/: batchjob.py  output.py
(+237 files in other folders)
