[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raser"
version = "4.1"
description = "RASER simulation framework"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "RASER Team" }
]
keywords = ["raser", "detector", "simulation", "geant4", "devsim", "root"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "h5py",
  "PyYAML",
  "tqdm",
  "numba",
  "joblib",
  "gmsh",
  "psutil",
  "devsim",
  "g4ppyy",
]

[dependency-groups]
test = [
  "mypy>=2",
  "pytest>=8",
  "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/raser-team/raser"
Repository = "https://github.com/raser-team/raser"

[project.scripts]
raser = "raser.cli.raser:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
raser = [
  "components/**/*",
  "apps/*/components/**/*",
  "apps/bmos/*.cir",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
markers = [
  "root: requires PyROOT",
  "devsim: requires devsim",
  "geant4: requires Geant4/g4ppyy",
  "ngspice: requires ngspice executable",
  "hardware: requires lab hardware",
  "slow: long-running simulation or scan",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
